[package]
name = "eon-client"
version = "0.5.0"
edition = "2024"
publish = false
license = "GPL-3.0-only"

[package.metadata.release]
release = false

[dependencies]
objects = { path = "../objects" }
libp2p-invert = { path = "../libp2p-invert" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.6", features = ["derive"] }
libp2p = { version = "0.56.0", features = ["tokio", "cbor", "dns", "kad", "noise", "macros", "request-response", "tcp", "websocket", "yamux", "identify", "serde"] }
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
libp2p-stream = "0.4.0-alpha"
uuid = { version = "1.11.0", features = ["serde"] }
postcard = { version = "1.1.1", features = ["alloc"] }
heck = "0.5.0"
base64 = "0.22.1"
blake3 = { version = "1.5.5", features = ["serde"] }
tokio-util = { version = "0.7.13", features = ["full"] }
anyhow = "1.0.95"
tracing-appender = "0.2.3"
tracing = "0.1.41"
shlex = "1.3.0"
dirs = "6.0.0"
bytes = "1.9.0"
humantime = "2.3.0"
serde_with = { version = "3.14.1", features = ["base64"] }
humantime-serde = "1.1.1"
serde_yaml = "0.9.34"
rand = "0.9.2"
getifaddrs = "0.6.1"
